# type_annotations

./: Makefile  README.md  pyproject.toml  test.py
.github/workflows/: ci.yml
src/advanced/: buffer.py  decorator_advanced.py
src/basic/: any.py  dict.py  typealias.py  union.py
src/extreme/: constructor.py
src/type_annotations/advanced/: buffer.py  callable-protocol.py  decorator.py  descriptor.py  forward.py  generator.py
src/type_annotations/basic/: final.py  kwargs.py  list.py  optional.py  parameter.py  return.py  tuple.py  variable.py
